--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -12,6 +12,11 @@ button{
   border:2px solid #56a8fb;
   border-radius: 9px;
   cursor: pointer;
+  font-size: large;
+  box-shadow: 1px 3px 5px 1px grey;
+}
+.input{
+  height:51px;
 }
 .row{
   margin: 8px 0;
@@ -23,4 +28,5 @@ button{
   padding: 10px 0px;
   border: 2px solid black;
   border-radius: 5px;
+  box-shadow: 0px 1px 5px 1px beige;
 }
